# FPAD

./: .gitignore  FPAD_clean (2).ipynb  README.md  pyproject.toml  pytest.ini  run_tests.bat  run_tests.sh
configs/: best_config.json  feature_importance.json  scalers.pkl
data/: features_CrossMatch.csv  features_GreenBit.csv  features_digital_persona.csv  images  train_features_optimal.csv  val_features_optimal.csv
mlruns/0/: meta.yaml
mlruns/438308124159751815/: meta.yaml
mlruns/438308124159751815/91f9a56b06984743a72e93f405591938/: meta.yaml
mlruns/438308124159751815/91f9a56b06984743a72e93f405591938/metrics/: val_accuracy  val_auc
mlruns/438308124159751815/91f9a56b06984743a72e93f405591938/tags/: mlflow.source.name
mlruns/438308124159751815/93cf97d6039b492f8b892c27b9172226/: meta.yaml
mlruns/438308124159751815/93cf97d6039b492f8b892c27b9172226/metrics/: val_accuracy  val_auc
mlruns/438308124159751815/93cf97d6039b492f8b892c27b9172226/params/: gabor_sigma  v1sz_y_ratio
mlruns/438308124159751815/93cf97d6039b492f8b892c27b9172226/tags/: mlflow.runName
src/: afqa_study.db  enhance.py  experiment.py  feature_engineering.py  inference.py  mask.py
src/data/: features_fake.csv  features_live.csv
src/data_pipeline/: build_features.py
src/feature_extraction/: __init__.py  acut.py  extractor.py  fda.py  gabor.py  helper.py  lcs.py  mean.py  mow.py  ocl.py  ofl.py  rdi.py  rps.py  rvu.py  s3pg.py  sep.py  sf.py  std.py
src/mlruns/0/: meta.yaml
src/mlruns/142590117833771826/: meta.yaml
src/mlruns/869470688676199268/: meta.yaml
src/mlruns/869470688676199268/098a561c74bd49ff8affc483f4964adf/: meta.yaml
src/mlruns/869470688676199268/0c823528c8cf4f89ac990a963fbecb24/: meta.yaml
src/mlruns/869470688676199268/0e30d4f81b7046a5bf1ef5e87a91d175/: meta.yaml
src/mlruns/869470688676199268/1fd51842c1734f438588a14c63007a88/: meta.yaml
src/mlruns/869470688676199268/37023fcfa2324dac889d7892c1d7c3ba/: meta.yaml
src/mlruns/869470688676199268/37340cf9b1a641248b0649d6329ba434/: meta.yaml
src/mlruns/869470688676199268/3775b7dc1f694398aa828ba77f0034a9/: meta.yaml
src/mlruns/869470688676199268/3a48ba1367f244d99b53e475c00b34fb/: meta.yaml
src/mlruns/869470688676199268/3c2a9e62e53944dfabab8095c666d33d/: meta.yaml
src/mlruns/869470688676199268/4016fc8326ba4172a7887709c482d3d4/: meta.yaml
src/mlruns/869470688676199268/4093064ccf904660a27ab90fbce8c161/: meta.yaml
src/mlruns/869470688676199268/43dba4ae03c24a29a0fbbbb6f6f05fd5/: meta.yaml
src/mlruns/869470688676199268/461e12df4d2e485e8086049d9ad5990a/: meta.yaml
src/mlruns/869470688676199268/4ca2d906c0d848b68a000db32eac1e4b/: meta.yaml
src/mlruns/869470688676199268/4cbe8a72a41e43ab9f343aee320f73c1/: meta.yaml
src/mlruns/869470688676199268/506678599f554b42a15ed500f3e720fd/: meta.yaml
src/mlruns/869470688676199268/5a4e6be25a9045939b9260f56d8d2d61/: meta.yaml
src/mlruns/869470688676199268/60bb9586236f4efc8659b1dd999580b9/: meta.yaml
src/mlruns/869470688676199268/67baaf78f90e47a8ae375e131a608a71/: meta.yaml
src/preprocessing/: preprocessing.py
src/training/: training.py
src/training/mlruns/0/: meta.yaml
tests/: README.md  __init__.py  conftest.py  test_feature_engineering.py  test_feature_extraction.py  test_feature_extractor.py  test_integration.py  test_mlflow_logging.py  test_preprocessing.py  test_real_data.py  test_train.py
(+942 files in other folders)
